crates/macro-tools/tests/ui/deref/fail/tuple_struct.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper(#[deref] String);

fn main() {}
