crates/macro-tools/tests/ui/deref/fail/tuple_struct.stderr
error: Deref can only be derived for structs with named fields
 --> tests/ui/deref/fail/tuple_struct.rs:4:8
  |
4 | struct Wrapper(#[deref] String);
  |        ^^^^^^^
